# mount-doom

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  flake.nix
ci/: BuildContainer.dockerfile  BuildStaticContainer.dockerfile  FormattingContainer.dockerfile
cmake/: dependencies.cmake
docs/: unsafe.md
instances/test/: t_001  t_002  t_002_transposed  t_002_without_sources_and_sinks  t_003  t_003_without_nodes_with_degree_one  t_005  t_005_no_arcs_between_sccs  t_005_scc_1  t_005_scc_2  t_006  t_006_node_3_removed  t_007  t_007_empty  t_008  t_009  t_009_expanded_graph  t_009_shortcutted_single_cycle  t_010  t_articulation_point_components  t_articulation_point_solver_regression  t_articulation_points_components_sym  t_dominating_node_self_loop  t_greedy_01  t_greedy_02  t_greedy_feasible_with_reductions_regression  t_post_clique_reduction  t_post_dominated_edge_reduction  t_post_dominating_node  t_post_fold_degree_2_001  t_post_funnel_reduction_no_folding  t_post_remove_k2_sccs  t_post_shortcut_directed_degree_one  t_pre_clique_reduction  t_pre_dominated_edge_reduction  t_pre_dominating_node  t_pre_funnel_reduction  t_pre_remove_k2_sccs  t_pre_shortcut_directed_degree_one  t_red_shortcut
scripts/: build_release_dynamic.sh  format.sh  iterative_branching.sh  make_release_static.sh  parallel_branching.sh  plot-one.sh  plot.sh  print_solution_sizes.sh
src/: CMakeLists.txt  algorithms.h  datastructures.h  doom.cpp  executable_helpers.cpp  executable_helpers.h  helpers.cpp  helpers.h  license.h  macos_timer.h
src/algorithms/: fvs_generation.cpp  fvs_generation.h  solvers.h
src/algorithms/solvers/: articulation_point.cpp  articulation_point.h  base.cpp  base.h  base_impl.h  branching.cpp  branching.h  branching_impl.h  brute_forcing.cpp  brute_forcing.h  challenge.cpp  challenge.h  greedy.cpp  greedy.h  greedy_impl.h  reducing.cpp  reducing.h  scc_splitting.cpp  scc_splitting.h  trivial_instance.cpp  trivial_instance.h  vertex_cover.cpp  vertex_cover.h
src/datastructures/: cycle_flow_graph.cpp  cycle_flow_graph.h  fvs_instance.cpp  fvs_instance.h  fvs_instance_impl.h  fvs_instance_reductions.cpp  fvs_instance_stats.cpp  fvs_instance_stats.h  graph.cpp  graph.h  graph_impl.h  graph_io.cpp  graph_io.h  partial_solution.cpp  partial_solution.h
stats/exact_public/: e_103.csv
test/: CMakeLists.txt  algorithms_test.cpp  algorithms_test_heavy.cpp  algorithms_test_helpers.h  datastructures_test.cpp
visualizations/exact_public/: e_005.bak.xgr  e_121.bak.xgr
